Add calculation of files inside folder asynchronously without blocking the UI thread