@@ -13,10 +13,23 @@ import java.util.List;
  */
 public class FileSystemService {
 
-	public static List<File> getNestedFilesInDirectory(String directory) throws IOException {
-		return Files.walk(Path.of(directory)).map(Path::toFile).toList();
+	
+	/**
+	 * Get file count within the selected directory. The folder given as parameter is excluded from the count
+	 * @param directory
+	 * @return number of files inside the directory
+	 * @throws IOException if an error arises reading the file
+	 */
+	public static long countFilesInDirectory(String directory) throws IOException {
+		return Files.list(Paths.get(directory)).map(Path::toFile).count();
 	}
 
+	
+	/**
+	 * Get all files and folders from a given root path.
+	 * @param directory
+	 * @return
+	 */
 	public static List<File> getFilesInDirectory(String directory) {
 		List<File> files = new ArrayList<>();
 
